2/14/11 add more molecule nodes (created using Piccolo to look like RPAL image files)
2/14/11 add test app for viewing all molecule nodes
2/14/11 add some level-2 game equations
2/14/11 create molecule symbols based on atom list
2/14/11 move equation radio buttons to upper right
2/14/11 moved strings, colors, etc. into atom and molecule constructors
2/14/11 cleaned up relationship between Atom and AtomNode
2/14/11 add symbols for additional molecules and atoms
2/10/11 migrate GameSettings to common.games
2/10/11 add Game Settings panel
2/10/11 change "Show molecules" to "Hide molecules" in Options menu
# 0.00.05 (48801) Feb 9, 2011
2/9/11 dev version with change requests from KL
2/4/11 restore the smiley face that appears for balanced equations
2/4/11 move equation selection radio buttons to upper left
2/4/11 change order of radio buttons to None, Balance Scales, Bar Charts
2/4/11 game settings model, candidate for phetcommon
2/4/11 constrained properties, candidates for phetcommon
2/4/11 add strings for Game to English strings file
2/4/11 display "molecules are hidden" in Boxes when molecules are hidden
# 0.00.04 (48661) Feb 4, 2011
2/4/11 dev version with change requests and fixes
2/4/11 fix #2715, JSpinners cause ClassCastException, rewrote parts of EquationNode
2/4/11 workaround for #2710, change background color of all PSwing(JComponent) when canvas color changes
2/4/11 change request: move equation radio buttons to upper right
2/4/11 change request: move Reset All button to lower right
2/4/11 remove Reset All button from Game tab
# 0.00.03 (48621) Feb 4, 2011
2/4/11 dev version with team change requests for 1st tab
2/3/11 make balance scales light up when equation is balanced
2/3/11 convert not-equals sign to a strokable path
2/3/11 convert "=" sign to a strokable path so that it can "light up" without disappearing on a light-colored background
2/3/11 add colors for Cl,F,P
2/3/11 add "Under Construction" notice to Game tab